syntax = "proto3";

package inventory;

option go_package = "./inventory";

service InventoryService {
  rpc CheckInventory (InventoryRequest) returns (InventoryResponse) {}
}

message InventoryRequest {
  repeated InventoryItem items = 1;
}

message InventoryItem {
  string product_id = 1;
  int32 quantity = 2;
}

message InventoryResponse {
  repeated ItemAvailability availabilities = 1;
}

message ItemAvailability {
  string product_id = 1;
  bool is_available = 2;
  int32 available_quantity = 3;
}